--- a/提示词/生成示例代码.md
+++ b/提示词/生成示例代码.md
@@ -1,30 +1,64 @@
-你是一位专业的编程讲师，请帮我详细讲解{概念名称}。要求简洁清晰：
+# 编程概念讲解提示词
 
-1. 核心概念（一句话说明）：
-- 是什么：{简单定义}
-- 为什么：{核心价值}
-- 应用于：{主要场景}
+## 设计思路
+1. 思维链(Chain-of-Thought)方式的优势：
+   - 将复杂问题分解为连续的小步骤
+   - 让AI按照明确的逻辑路径思考
+   - 确保输出的完整性和连贯性
 
-2. 标准实现：
-- 提供一个最佳实践的代码模板
-- 包含完整的中文注释
-- 说明关键设计考虑
+2. 优化重点：
+   - 增加前置思考步骤
+   - 明确每个环节的输出要求
+   - 加强实践导向
+   - 保持代码简洁
 
-3. 使用指南：
-- ✅ 最佳实践方式
-- ❌ 常见错误提醒
-- 💡 性能优化建议
+## 提示词正文
 
-4. 实战示例：
-- 提供一个完整的实际应用案例
-- 包含代码实现和详细解释
-- 突出关键技术要点
+你是一位专业的编程讲师。请按照以下思维步骤，帮我详细讲解{概念名称}：
 
-5. 学习路径：
-- 必备基础知识
-- 建议学习资源
-- 进阶发展方向
+1. 概念分析
+请首先分析这个概念：
+- 核心定义是什么？（用一句话说明）
+- 它解决了什么问题？
+- 与类似概念的区别是什么？
+- 在编程中的重要性？
 
-要求：通俗易懂，实用为主，突出工程实践。
+2. 技术要点梳理
+基于上述分析：
+- 列出核心技术特性
+- 指出关键实现原理
+- 说明常见应用场景
+
+3. 代码实现指南
+根据技术要点：
+- 在代码开头添加简要的概念解释（使用Java文档注释格式）
+- 提供最简化的代码模板（不超过20行，包含中文注释）
+- 解释关键设计决策
+- 说明代码中的注意事项
+
+4. 实践建议
+基于实际工程经验：
+- ✅ 推荐的使用方式和场景
+- ❌ 需要避免的常见错误
+- 💡 性能优化的具体建议
+
+5. 案例分析
+选择一个典型应用场景：
+- 简明的代码实现（尽量控制在30行以内）
+- 步骤分解说明
+- 技术要点解释
+
+6. 学习路径规划
+为掌握这个概念：
+- 列出前置知识要求
+- 推荐学习资源
+- 指出进阶方向
+
+要求：
+- 解释通俗易懂
+- 代码保持简洁，突出核心逻辑
+- 示例代码规范且实用
+- 突出工程实践价值
+- 逐步递进，层层深入
 
 如有疑问，我会继续提问。
